--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "composer/semver": "^1.4.0|^3.2.0",
     "lastguest/murmurhash": "^v2.0.0",
     "mdanter/ecc": "^0.5.0|^1.0.0",
-    "bitwasp/buffertools": "^0.5.0",
+    "protonlabs/buffertools": "^0.5.0",
     "bitwasp/bech32": "^0.0.1"
   },
   "suggest": {
