--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: "Unit tests"
 
 on:
   push:
-    branches: [ main, master, 1.0 ]
+    branches: [ main, master, "1.0" ]
   pull_request:
-    branches: [ main, master, 1.0 ]
+    branches: [ main, master, "1.0" ]
 
 jobs:
   static-analysis-phpstan:
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         php-version:
+          - 8.0
           - 8.1
           - 8.2
 
